- Add LaTeX export to demo - Edit example text

--- a/Demo/public/assets/style.css
+++ b/Demo/public/assets/style.css
@@ -42,6 +42,9 @@ body { font-size: 13px;
 .mm-inline-code {font-family: "Courier New"
   , Courier, monospace; padding-left: 5px; padding-right: 5px;background-color: #f5f5f5; font-size: 11pt;
 }
+
+h1 {font-size: 24px}
+
 .mm-image {width: 100%}
 .mm-h1 {font-size: 18pt}
 .mm-h2 {font-size: 16pt}
